--- a/content/blog/cdc-use-cases-7-ways-to-put-cdc-to-work.adoc
+++ b/content/blog/cdc-use-cases-7-ways-to-put-cdc-to-work.adoc
@@ -4,6 +4,11 @@ date: "2023-11-02T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/cdc-use-cases
+tags:
+  - cdc
+  - debezium
+  - streaming
+  - flink
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
