--- a/content/blog/change-data-capture-breaks-encapsulation-does-it-though.adoc
+++ b/content/blog/change-data-capture-breaks-encapsulation-does-it-though.adoc
@@ -1,9 +1,14 @@
 ---
-title: '“Change Data Capture Breaks Encapsulation”. Does it, though?'
+title: '"Change Data Capture Breaks Encapsulation". Does it, though?'
 date: "2023-11-21T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/change-data-capture-breaks-encapsulation-does-it-though
+tags:
+  - cdc
+  - debezium
+  - flink
+  - streaming
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
