--- a/content/blog/decodable-vs-amazon-msf-running-your-first-apache-flink-job.adoc
+++ b/content/blog/decodable-vs-amazon-msf-running-your-first-apache-flink-job.adoc
@@ -4,6 +4,9 @@ date: "2024-06-27T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/your-first-apache-flink-job
+tags:
+  - flink
+  - streaming
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
