--- a/content/blog/getting-started-with-pyflink-on-kubernetes.adoc
+++ b/content/blog/getting-started-with-pyflink-on-kubernetes.adoc
@@ -4,6 +4,10 @@ date: "2023-12-07T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/getting-started-with-pyflink-on-kubernetes
+tags:
+  - flink
+  - kubernetes
+  - streaming
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
