--- a/content/blog/introducing-support-for-the-apache-flink-web-ui.adoc
+++ b/content/blog/introducing-support-for-the-apache-flink-web-ui.adoc
@@ -4,6 +4,9 @@ date: "2023-09-12T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/introducing-support-for-the-apache-flink-web-ui
+tags:
+  - flink
+  - streaming
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
