--- a/content/blog/meet-the-decodable-crew-at-kafka-summit-london-2024.adoc
+++ b/content/blog/meet-the-decodable-crew-at-kafka-summit-london-2024.adoc
@@ -4,6 +4,10 @@ date: "2024-03-14T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/meet-decodable-at-kafka-summit-london-2024
+tags:
+  - kafka
+  - flink
+  - streaming
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
