--- a/content/blog/postgres-15-logical-decoding-row-filters-with-debezium.adoc
+++ b/content/blog/postgres-15-logical-decoding-row-filters-with-debezium.adoc
@@ -4,6 +4,10 @@ date: "2022-12-15T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/postgres-15-logical-decoding-row-filters-with-debezium
+tags:
+  - postgres
+  - debezium
+  - cdc
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
