--- a/content/blog/revisiting-the-outbox-pattern.adoc
+++ b/content/blog/revisiting-the-outbox-pattern.adoc
@@ -4,6 +4,11 @@ date: "2024-10-31T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/revisiting-the-outbox-pattern
+tags:
+  - cdc
+  - debezium
+  - postgres
+  - kafka
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
