--- a/content/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable.adoc
+++ b/content/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable.adoc
@@ -4,6 +4,9 @@ date: "2023-04-25T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable
+tags:
+  - flink
+  - streaming
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
