--- a/content/blog/a-taxonomy-of-data-change-events.adoc
+++ b/content/blog/a-taxonomy-of-data-change-events.adoc
@@ -4,6 +4,10 @@ date: "2024-03-13T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/taxonomy-of-data-change-events
+tags:
+  - cdc
+  - debezium
+  - streaming
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
