--- a/content/blog/checkpoint-chronicle-january-2024.adoc
+++ b/content/blog/checkpoint-chronicle-january-2024.adoc
@@ -4,6 +4,11 @@ date: "2024-01-24T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/checkpoint-chronicle-january-2024
+tags:
+  - streaming
+  - kafka
+  - flink
+  - newsletter
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
