--- a/content/blog/denormalizing-change-event-streams-for-document-stores.adoc
+++ b/content/blog/denormalizing-change-event-streams-for-document-stores.adoc
@@ -4,6 +4,11 @@ date: "2024-04-29T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/denormalizing-change-event-streams-for-document-stores
+tags:
+  - flink
+  - streaming
+  - cdc
+  - debezium
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
