--- a/content/blog/failover-replication-slots-with-postgres-17.adoc
+++ b/content/blog/failover-replication-slots-with-postgres-17.adoc
@@ -4,6 +4,10 @@ date: "2024-12-03T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/failover-replication-slots-with-postgres-17
+tags:
+  - postgres
+  - cdc
+  - debezium
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
