--- a/content/blog/get-running-with-apache-flink-on-kubernetes-part-1-of-2.adoc
+++ b/content/blog/get-running-with-apache-flink-on-kubernetes-part-1-of-2.adoc
@@ -4,6 +4,10 @@ date: "2025-01-21T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/get-running-with-apache-flink-on-kubernetes-1
+tags:
+  - flink
+  - kubernetes
+  - streaming
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
