--- a/content/blog/introducing-the-decodable-sdk-for-custom-pipelines.adoc
+++ b/content/blog/introducing-the-decodable-sdk-for-custom-pipelines.adoc
@@ -4,6 +4,10 @@ date: "2023-07-11T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/introducing-the-decodable-sdk-for-custom-pipelines
+tags:
+  - flink
+  - streaming
+  - java
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
