--- a/content/blog/logical-replication-from-postgres-16-stand-by-serversdebezium-and-failover-slots.adoc
+++ b/content/blog/logical-replication-from-postgres-16-stand-by-serversdebezium-and-failover-slots.adoc
@@ -4,6 +4,10 @@ date: "2023-12-19T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/logical-replication-from-postgres-16-stand-by-servers-part-2-of-2
+tags:
+  - postgres
+  - debezium
+  - cdc
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
