--- a/content/blog/processing-github-webhooks-with-decodable.adoc
+++ b/content/blog/processing-github-webhooks-with-decodable.adoc
@@ -4,6 +4,9 @@ date: "2023-09-06T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/processing-github-webhooks-with-decodable
+tags:
+  - streaming
+  - flink
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
