--- a/content/blog/seven-must-see-talks-at-current-2024.adoc
+++ b/content/blog/seven-must-see-talks-at-current-2024.adoc
@@ -4,6 +4,10 @@ date: "2024-09-06T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/seven-must-see-talks-at-current-2024
+tags:
+  - kafka
+  - flink
+  - streaming
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
