--- a/content/blog/the-wonders-of-postgres-logical-decoding-messages-for-cdc.adoc
+++ b/content/blog/the-wonders-of-postgres-logical-decoding-messages-for-cdc.adoc
@@ -4,6 +4,11 @@ date: "2023-03-06T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/the-wonders-of-postgres-logical-decoding-messages-for-cdc
+tags:
+  - postgres
+  - cdc
+  - debezium
+  - flink
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
