--- a/content/blog/using-stand-by-servers-for-postgres-logical-replication.adoc
+++ b/content/blog/using-stand-by-servers-for-postgres-logical-replication.adoc
@@ -4,6 +4,10 @@ date: "2023-12-19T00:00:00+00:00"
 draft: true
 markup: adoc
 canonical_url: https://www.decodable.co/blog/postgres-logical-replication
+tags:
+  - postgres
+  - cdc
+  - debezium
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
