--- a/content/blog/failover-replication-slots-with-postgres-17.adoc
+++ b/content/blog/failover-replication-slots-with-postgres-17.adoc
@@ -269,7 +269,7 @@ You may consider this approach also for connecting to an on-prem database in a p
 The overall architecture looks like this:
 
 
-image::/images/2024/12/674e257ecdf979a10583196d_AD_4nXeq8ARRjEniBZvCzgdxDbOdLwTGJqOIZbQI775oygnjJEkLu6UWIOTPez2VTLrMQMHwEtqqlsU3fhHyJ1NqAlS8UEnjbehvoVeQSsagXd4pAn1GiHfFTPhx4Q2ptZOZbGZL09M4.png[]
+image::failover-slots-1.png[]
 _Fig._
 _1: Solution overview_For the following steps, you'll need to have these things:
 
@@ -428,7 +428,7 @@ user@primary:inventorydb> UPDATE inventory.customers SET first_name='Samantha' w
 Shortly thereafter, these updates will be reflected in the stream preview as well:
 
 
-image::/images/2024/12/674e257e52a9d8c83bbef4e5_AD_4nXf_4rMhYzKoGq1zt-Y7JzA4dfC1V55AgqjGI31oJjibaseY52fryG2h6ZI1MaEgu18pz6aTp_Xf-Wx1yU0jdqTn2Yi2C_lSvlam6q2JZj-FNQPCBR5zSdruVPOuRg-IyROg0EN_0w.png[]
+image::failover-slots-2.png[]
 _Fig._
 _2: Postgres data change events in the Decodable stream preview_Now let's simulate a failover from primary to replica server and see how the failover of the replication slot is handled.
 Stop the primary Postgres node:
