--- a/content/blog/introducing-the-decodable-sdk-for-custom-pipelines.adoc
+++ b/content/blog/introducing-the-decodable-sdk-for-custom-pipelines.adoc
@@ -117,7 +117,7 @@ After implementing and testing your stream processing job, you can now deploy it
 Make sure you have the Custom Pipelines feature enabled in the Decodable UI:
 
 
-image::/images/2023/07/6717dc3482a396e17c57a7a3_665de628e01a0041a62ed276_j2i4lclm1hDGLUNLtrxu0Wzhups_FDO9F2cQg8e0pEwZT6hwnrCnVWEROgbXMKdnQnkBusfIfBxV3fHUJiUjYEyy2v8adaIaCGfclK7LZQEv4aIO1q3qJVjSqE9jy4tt92Jq3ZxzxTmHsBIvufMMG7c.webp[]
+image::decodable-sdk-1.webp[]
 Then, package your job as a JAR file by running _mvn clean verify_ from the root directory of your project.
 Next, deploy your job to Decodable using the Decodable CLI:
 
@@ -131,7 +131,7 @@ Next, deploy your job to Decodable using the Decodable CLI:
 Alternatively, you can upload your job via the web UI:
 
 
-image::/images/2023/07/6717dc3482a396e17c57a795_665de628e01a0041a62ed278_fgL9Mj-8rqEXmrnv_fXJuQvyZJ15jZK9wA_gD0WyT_VTclucFJ9QrVYAfxTs6GNBNc17aGSH9tTA8FqAA8n9llhCi8fxZNAMQzrdWxFDX-xmwrxMByF7hUOEu_9Mbd3hciPw12Zw-rluT8KbVP3MhPs.webp[]
+image::decodable-sdk-2.webp[]
 At this point, your job is deployed but it isn't running yet.
 You can activate it either in the CLI like so:
 
@@ -145,7 +145,7 @@ You can activate it either in the CLI like so:
 Or, using the UI:
 
 
-image::/images/2023/07/6717dc3482a396e17c57a78e_665de628e01a0041a62ed277_FmrnJJNIi6t8884groGxyB_FPvBfopUQpJHAdXKzwVJ_ipNdD5gyycmCrUL84DXbTrZM5iYtdesFY8BcA5--Gu873iDSbj1oWCr0zD5FdMraK_Djkr4L77Afd72Su-UBNP6sj7ABiIgpYlodPWLGyGE.webp[]
+image::decodable-sdk-3.webp[]
 After waiting a few moments, your job is running and processing purchase orders from the input stream and sending them to the output stream.
 
 
