--- a/content/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable.adoc
+++ b/content/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable.adoc
@@ -56,7 +56,7 @@ This means you can easily integrate with fully-managed connectors, only moving t
 You also can arbitrarily combine SQL-based and custom pipelines within one and the same end-to-end data flow.
 
 
-image::/images/2023/04/6717dc4282a396e17c57b686_6702c07fe0f6d9da672c8827_665de628e01a0041a62ed25d_image_2.webp[]
+image::flink-jobs-decodable-1.webp[]
 _Fig._
 _1: SQL-based and Flink-based custom pipelines in Decodable._
 
