--- a/content/blog/cdc-use-cases-7-ways-to-put-cdc-to-work.adoc
+++ b/content/blog/cdc-use-cases-7-ways-to-put-cdc-to-work.adoc
@@ -29,6 +29,7 @@ This is because it enables the tight integration of transactional databases into
 CDC responds to changes–such as inserts, updates, and deletions–as they are made in a transactional database and sends those changes in real time to another system for ingesting and processing.
 While there are multiple possible ways for implementing a CDC solution, the most powerful approach is log-based CDC, which retrieves change events from the transaction log of a database.
 
+image::cdc-use-cases-fig1.webp[]
 _Fig._
 _1: Log-based change data capture_
 
@@ -72,6 +73,7 @@ CDC responds to changes to the database in real time and can feed those changes 
 Besides dedicated caching solutions such as Redis, link:https://github.com/debezium/debezium-examples/tree/main/distributed-caching[Infinispan], or Hazelcast, embedded SQLite databases are an interesting option for implementing application-side caches, as they not only allow for simple key-based look-ups but support full query flexibility via SQL.
 If you would like to learn more about this kind of architecture, take a look at my talk “Keep Your Cache Always Fresh With Debezium”, which explores one implementation of this in depth ( link:https://www.youtube.com/watch?v=zOOFMHAjoPI[video recording], link:https://speakerdeck.com/gunnarmorling/keep-your-cache-always-fresh-with-debezium-current-22[slides] ).
 
+image::cdc-use-cases-fig2.webp[]
 _Fig._
 _2: Application-side caches in a distributed service, kept in sync with the primary DB via CDC_ +
 +
@@ -105,8 +107,7 @@ Flink's datastream API can be used for enriching all the change events from one 
 As all change events emitted by Debezium contain the id of the transaction they originate from, correlating the events of one transaction isn't complicated.
 You can find link:https://github.com/decodableco/examples/tree/main/postgres-logical-decoding[a basic implementation of this] in the Decodable examples repository.
 
-
-
+image::cdc-use-cases-fig3.webp[]
 _Fig._
 _3: Enriching CDC events with transactional metadata using stream processing_
 
@@ -121,6 +122,7 @@ However, in contrast to a static table query, a query on a dynamic table runs co
 
 CDC streams can be used as the source that drives a continuous query, representing a form of an incrementally updated materialized view, always yielding the latest results, as the underlying data changes.
 
+image::cdc-use-cases-fig4.webp[]
 _Fig._
 _4: Continuous query for incrementally computing a join between two CDC streams_
 
@@ -132,6 +134,7 @@ For instance, you may consider pushing any updates directly to a dashboard in co
 As part of their business logic, microservices often not only have to update their own local data store, but also need to notify other services about data changes that have happened.
 The link:https://debezium.io/blog/2019/02/19/reliable-microservices-data-exchange-with-the-outbox-pattern/[outbox pattern] —which is implemented using CDC—is an approach for letting services execute these two tasks in a safe and consistent manner, avoiding the pitfalls of unsafe dual writes.
 
+image::cdc-use-cases-fig5.webp[]
 _Fig._
 _5: Microservices data exchange with the outbox pattern_
 
